--- a/front/src/app/navbar/navbar.component.html
+++ b/front/src/app/navbar/navbar.component.html
@@ -10,9 +10,9 @@
   <!-- Notifications icon -->
   <span class="icon-box"><img class="icon" src="./../assets/images/bell-icon-1.png"></span>
   <!-- Messages icon -->
-  <span class="icon-box"><img class="icon" src="./../assets/images/bell-icon-1.png"></span>
+  <span class="icon-box"><img class="icon message-icon" src="./../../assets/images/message-icon-1.png"></span>
   <!-- user icon(avatar) -->
-  <span class="icon-box"><img class="icon" src="./../assets/images/bell-icon-1.png"></span>
+  <span class="icon-box"><img class="icon" src="./../../assets/images/def-user-avatar-icon-1.png"></span>
   <!-- accounts and other paramteres icon -->
   <span class="icon-box"><img class="icon arrow-down" src="./../assets/images/arrow-down-icon-1.png"></span>
 </nav>
