--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<main>
+  <section class="pins-container">
+    <div class="pin" *ngFor="let pin of pins" (mouseenter)="onPinHover(pin)" (mouseleave)="onPinLeave(pin)">
+      <div class="pin-container">
+        <img [src]=pin.contentUrl>
+        <button class="save-button">Save</button>
+      </div>
+    </div>
+  </section>
+</main>
