--- a/front/src/app/navbar/navbar.component.css
+++ b/front/src/app/navbar/navbar.component.css
@@ -27,7 +27,7 @@ nav{
 }
 
 .icon-box:hover{
-  background-color: rgb(230, 230, 230);
+  background-color: var(--gray);
 }
 
 .logo{
@@ -53,7 +53,7 @@ nav{
 
 .button-active{
   background-color: black;
-  color: rgb(250, 250, 250);
+  color: var(--white);
 }
 
 .arrow-down{
@@ -74,7 +74,7 @@ nav{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(230, 230, 230);
+  background-color: var(--gray);
 }
 
 .search-bar:focus{
@@ -91,5 +91,4 @@ nav{
 .message-icon{
   width: 25px;
   height: 25px;
-
 }
