Add 'infinite scroll' with installing a InfiniteScrollModule, add some pins(a lot of them in order to test infinite scroll), add CSS when user clicks a search bar

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!-- Navbar -->
 <app-navbar></app-navbar>
 <!--Page depending on the router path-->
+<div class="noneDisplay" [ngClass]="{'search-active':isSearchActive}" >
+</div>
 <router-outlet></router-outlet>
+
