--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -6,5 +6,22 @@
         <button class="save-button">Save</button>
       </div>
     </div>
+<!--
+    <div class="no-more-pins" *ngIf="!hasMore">
+      No more pins to show.
+    </div>  -->
+    <div
+      class="scroll-trigger"
+      infinite-scroll
+      [infiniteScrollDistance]="2"
+      [infiniteScrollThrottle]="500"
+      (scrolled)="onScroll()"
+    ></div>
   </section>
+
+  <div class="loader" *ngIf="!loaded">
+    <p>Loading more pins...</p>
+  </div>
+
 </main>
+
