--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,7 +1,12 @@
 <!-- Navbar -->
 <app-navbar></app-navbar>
 <!--Page depending on the router path-->
-<div class="noneDisplay" [ngClass]="{'search-active':isSearchActive}" >
-</div>
+<section>
+  <div class="noneDisplay" [ngClass]="{'search-active':isSearchActive}">
+  </div>
+  <div class="search-active_box-container">
+    <div class="noneDisplay" [ngClass]="{'search-active_box':isSearchActive}">
+    </div>
+  </div>
+</section>
 <router-outlet></router-outlet>
-
