--- a/front/src/app/home/home.component.css
+++ b/front/src/app/home/home.component.css
@@ -55,6 +55,10 @@
   margin-left: 50%;
   margin-top: 5px;
 }
+
+.save-button:hover{
+  filter: brightness(0.9);
+}
 /* When hovers, it applies this to the .save-button, it would do it to itself if it is not specified */
 .pin-container:hover .save-button{
   display: inline;
