--- a/front/src/app/navbar/navbar.component.css
+++ b/front/src/app/navbar/navbar.component.css
@@ -10,6 +10,7 @@ nav{
   justify-content: space-between;
   width: 99%;
   z-index: 100;
+  padding: 10px;
 }
 
 .icon{
@@ -32,7 +33,7 @@ nav{
 }
 
 .logo{
-  width: 35px;
+  width: 60px;
   height: 35px;
   cursor: pointer;
 }
