--- a/front/src/app/navbar/navbar.component.css
+++ b/front/src/app/navbar/navbar.component.css
@@ -96,3 +96,29 @@ nav{
   height: 25px;
 }
 
+.navbar-createmenu{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+
+  position: absolute;
+  left:10%;
+  width: 10vw;
+  background-color: var(--white);
+  padding: 5px 5px 5px 10px;
+  z-index: 100;
+  border-radius: 10px;
+}
+
+.navbar-createmenu__item{
+  display: flex;
+  padding: 5px;
+  /* flex:1 */
+  margin: 3px 0;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.navbar-createmenu__item:hover{
+  background-color: var(--gray);
+}
