--- a/front/src/app/navbar/navbar.component.html
+++ b/front/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
   <img class="logo" src="./../assets/images/logo.png">
   <button class="button button-active">Home</button>
-  <button class="button create-btn">Create<img class="arrow-down"
+  <button (blur)="wrapCreateMenu()" (click)="toggleCreateMenu()" class="button create-btn">Create<img class="arrow-down"
       src="./../assets/images/arrow-down-icon-1.png"></button>
   <div class="search-bar-box">
     <img *ngIf="!search_bar_focus" class="icon" src="./../../assets/images/search-icon-1.png">
@@ -16,3 +16,6 @@
   <!-- accounts and other paramteres icon -->
   <span class="icon-box"><img class="icon arrow-down" src="./../assets/images/arrow-down-icon-1.png"></span>
 </nav>
+<div *ngIf="createMenuDropped"  class="navbar-createmenu">
+  <div class="navbar-createmenu__item"><a>Create Pin</a></div>
+</div>
