Get rid of unnessesary complexity and fix previous issue
Get rid of unnessesary complexity:
instead of using files of app.component and service in order to share
search bar's state(whether it focuced or not) I inplemented it in
the navbar component

Fix previous issue:
Now only when user clicks outside of the dropped menu it closes
(before it used to close wherever you click)

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,12 +1,5 @@
-<!-- Navbar -->
-<app-navbar></app-navbar>
+<!-- Header -->
+<app-header></app-header>
 <!--Page depending on the router path-->
-<section>
-  <div class="noneDisplay" [ngClass]="{'search-active':isSearchActive}">
-  </div>
-  <div class="search-active_box-container">
-    <div class="noneDisplay" [ngClass]="{'search-active_box':isSearchActive}">
-    </div>
-  </div>
-</section>
+
 <router-outlet></router-outlet>
