--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
 <app-header></app-header>
 <!--Page depending on the router path-->
-
+<div class="nav-filler"></div>
 <router-outlet></router-outlet>
