added routerLink for main page, serializers, install rest django and CORS for allowing to some hosts to send requests to our back

--- a/front/src/app/navbar/navbar.component.html
+++ b/front/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
-  <img class="logo" src="./../assets/images/logo.png">
-  <button class="button button-active">Home</button>
+  <img routerLink="home" class="logo" src="./../assets/images/logo.png">
+  <button routerLink="home" class="button button-active">Home</button>
   <div #createMenuBtn>
     <button (click)="toggleCreateMenu()" class="button create-btn">Create<img class="arrow-down"
         src="./../assets/images/arrow-down-icon-1.png"></button>
