delete pseudo-users and add auth user models from django itself and adding initial login
switching to Django 3.2 because of rest_django_jwt
installing rest_django_jwt for Auth and Pillow for image storage
Now visitor can't visit and use our site without auth.

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,10 @@
-<!-- Header -->
-<app-header></app-header>
-<!--Page depending on the router path-->
-<div class="nav-filler"></div>
-<router-outlet></router-outlet>
+<!-- appears if user is not logged in -->
+<app-login *ngIf="!isLoggedIn"></app-login>
+<!-- we give access to our website only if user is registered -->
+<div *ngIf="isLoggedIn">
+  <!-- Header -->
+  <app-header></app-header>
+  <!--Page depending on the router path-->
+  <div class="nav-filler"></div>
+  <router-outlet></router-outlet>
+</div>
