--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Login</title>
   <link rel="stylesheet" type="text/css" href="login.component.css">
 </head>
+
 <body>
-    <div class="container">
-    <div class="form-container">
+  <div class="container">
+
+    <div class="form-container" *ngIf="!registerMode">
+
       <h2>Login</h2>
       <form>
         <div class="form-group">
           <label for="username">Username</label>
-          <input type="text" id="username" name="username" required>
+          <input type="text" [(ngModel)]="username" id="username" name="username" required>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required>
+          <input type="password" [(ngModel)]="password" id="password" name="password" required>
         </div>
         <button type="submit">Login</button>
       </form>
+      <p (click)="toggleRegisterMode()">Don't have an account?</p>
     </div>
-    <div class="form-container">
+
+
+    <div class="container form-container" *ngIf="registerMode">
+
       <h2>Register</h2>
       <form>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" [(ngModel)]="email" id="email" name="email" required>
         </div>
         <div class="form-group">
           <label for="username">Username</label>
-          <input type="text" id="username" name="username" required>
+          <input type="text" [(ngModel)]="username" id="username" name="username" required>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required>
+          <input type="password" [(ngModel)]="password" id="password" name="password" required>
         </div>
         <button type="submit">Register</button>
       </form>
+      <p (click)="toggleRegisterMode()">Already have an account?</p>
     </div>
+
+
+
   </div>
 </body>
+
 </html>
