add primitive login
add auth Interceptor in order to add Auth. header with user's token to
the each request
functional log out button in the drop out menu

--- a/front/src/app/drop-out-menu/drop-out-menu.component.html
+++ b/front/src/app/drop-out-menu/drop-out-menu.component.html
@@ -1,1 +1,8 @@
-<p>drop-out-menu works!</p>
+<div class="menu">
+  <div class="profile"></div>
+  <div class="options">
+    <div>
+      <button class="btn logout__btn" (click)="logout()">Log out</button>
+    </div>
+  </div>
+</div>
