--- a/front/src/app/navbar/navbar.component.html
+++ b/front/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
   <!-- Messages icon -->
   <span class="icon-box" (click)="toggleMessages()" #messagesIcon><img class="icon message-icon" src="./../../assets/images/message-icon-1.png"></span>
   <!-- user icon(avatar) -->
-  <span class="icon-box"><a [routerLink]="['profile']"><img class="icon" [src]="userAvatar ? userAvatar : './../../assets/images/def-user-avatar-icon-1.png'"></a></span>
+  <span class="icon-box"><a [routerLink]="['profile']"><img class="icon" [src]="userAvatar  || './../../assets/images/def-user-avatar-icon-1.png'"></a></span>
   <!-- accounts and other paramteres icon -->
   <span class="icon-box" (click)="toggleMenu()" #menuIcon><img class="icon arrow-down" src="./../assets/images/arrow-down-icon-1.png"></span>
 </nav>
