start work with the user profile
front:
add profile avatar

back:
add API to get the filtered pins by a specific user

fixed a mistake in UserSerializer, replace
serializers.Serializer to serializers.ModelSerializer

--- a/front/src/app/profile/profile.component.html
+++ b/front/src/app/profile/profile.component.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <header>
-    <img class="profile-pic" src="https://picsum.photos/200" alt="Profile Picture">
-    <h1>My Profile</h1>
+    <img class="profile-pic" [src]="userAvatar ||'https://picsum.photos/200'" alt="Profile Picture">
+    <h1>{{userName}}</h1>
     <button>Change Profile</button>
     <div class="switch-btn">
       <button [class.active]="activeSection === 'created'" (click)="showSection('created')">Created Pins</button>
