added styling, settings page constructed, page not found constructed, added unique gradient background

--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -20,6 +20,7 @@
   </section>
 
   <div class="loader" *ngIf="!loaded">
+    <div class="spinner"></div>
     <p>Loading more pins...</p>
   </div>
 
