--- a/front/src/app/drop-out-menu/drop-out-menu.component.html
+++ b/front/src/app/drop-out-menu/drop-out-menu.component.html
@@ -1,10 +1,7 @@
 <div class="menu">
-  <div class="profile"></div>
+  
   <div class="options">
-
     <button class="btn logout__btn" (click)="logout()">Log out</button>
-    <button class="btn logout__btn" routerLink="settings" >Settings</button>
-
-
+    <button class="btn settings__btn" routerLink="settings">Settings</button>
   </div>
 </div>
