--- a/front/src/app/home/home.component.css
+++ b/front/src/app/home/home.component.css
@@ -64,11 +64,34 @@
   display: inline;
 }
 
-.loader{
-  display: block;
-  font-size: 45px;
-  z-index: 3;
-  width: 100%;
-  height: 10%;
+
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.spinner {
+  border: 4px solid #f3f3f3; /* Light grey */
+  border-top: 4px solid #3498db; /* Pinterest blue */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin-bottom: 10px;
+}
+
+.loading-message {
+  font-family: 'Pacifico', cursive;
+  font-size: 24px;
+  color: #3498db; /* Pinterest blue */
+  margin: 0;
+  text-align: center;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  letter-spacing: 1px;
 }
 
