--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -1,11 +1,11 @@
 body {
-  background-color: #f5f5f5;
+  background: linear-gradient(#3939be, #f5f5f5);
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
-input[type="text"], input[type="password"], select {
+input[type="text"], input[type="password"], select, input[type="email"] {
   display: block;
   width: 100%;
   padding: 10px;
@@ -17,29 +17,21 @@ input[type="text"], input[type="password"], select {
   font-family: Arial, sans-serif;
 }
 
-input[type="submit"] {
-  background-color: #1e90ff;
-  border: none;
-  color: #fff;
+input[type="submit"], button[type="submit"] {
+  background-color: transparent;
+  border: 1px solid black;
+  color: #000;
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
   font-family: Arial, sans-serif;
+  transition: all 0.2s ease-in-out;
 }
 
-input[type="email"] {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-sizing: border-box;
-  font-family: Arial, sans-serif;
-}
-input[type="submit"]:hover {
-  background-color: #187bcd;
+input[type="submit"]:hover, button[type="submit"]:hover {
+  background-color: #000;
+  color: #fff;
+  border-radius: 20px;
 }
 
 label {
@@ -61,32 +53,28 @@ label {
   font-family: Arial, sans-serif;
 }
 
-button[type="submit"] {
-  padding: 10px 20px;
-  background-color: #1e90ff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-button[type="submit"]:hover {
-  background-color: #187bcd;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .form-container p{
   color: #187bcd;
   cursor: pointer;
-  font-size: 10px;
+  font-size: 14px;
   margin-top: 10px;
+  transition: filter 0.2s ease-in-out;
 }
 
 .form-container p:hover{
   filter: brightness(110%);
 }
 
-
 .form-container h2{
   margin-bottom: 15px;
+  font-size: 24px;
+  font-weight: bold;
 }
