--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -27,7 +27,7 @@
     </div>
 
 
-    <div class="container form-container" *ngIf="registerMode">
+    <div class="form-container" *ngIf="registerMode">
 
       <h2>Register</h2>
       <form>
