--- a/front/src/app/navbar/navbar.component.css
+++ b/front/src/app/navbar/navbar.component.css
@@ -51,6 +51,7 @@ nav{
   cursor: pointer;
   margin: 0;
   padding: 5px 10px;
+  font-family: Arial, sans-serif;
 }
 
 .button-active{
@@ -115,8 +116,9 @@ nav{
   display: flex;
   padding: 5px;
   /* flex:1 */
+  font-family: Arial, sans-serif;
   margin: 3px 0;
-  font-size: 1.1rem;
+  font-size: 1rem;
   border-radius: 10px;
   cursor: pointer;
 }
@@ -202,8 +204,9 @@ nav{
   position: absolute;
   right: 0.5vw;
   width: 15vw;
-  height: 80vh;
+  height: 12vh;
   background-color: var(--white);
+  font-family: Arial, sans-serif;
 }
 
 .navbar-menu__container{
