--- a/front/src/app/profile/profile.component.css
+++ b/front/src/app/profile/profile.component.css
@@ -6,8 +6,8 @@ body {
   }
   
   header {
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
+    background-color: transparent;
+    
     padding: 20px;
     text-align: center;
     display: flex;
@@ -26,20 +26,21 @@ body {
   
   header h1 {
     margin-top: 20px;
+    margin-bottom: 10px;
   }
   
   header button {
-    margin-top: 10px;
+    background-color: transparent;
+    color: black;
+    border: 1px solid black;
     padding: 10px 20px;
-    background-color: #1e90ff;
-    color: #fff;
-    border: none;
     border-radius: 5px;
     cursor: pointer;
   }
   
   header button:hover {
-    background-color: #187bcd;
+    background-color: black;
+    color: white;
   }
   
   section {
@@ -95,14 +96,16 @@ body {
   
   .switch-btn button {
     padding: 10px 20px;
-    background-color: #1e90ff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
+    background-color: transparent; /* change background color to transparent */
+    color: #000;
+    border: 1px solid black; /* add border property */
+    border-radius: 20px;
     cursor: pointer;
     margin: 0 10px;
   }
   
   .switch-btn button.active {
-    background-color: #187bcd;
+    background-color: #000;
+    color: #fff;
+    border-radius: 20px;
   }
