--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -9,4 +9,9 @@
   --white: rgb(250,250,250);
   --blue: rgb(57,57,190);
 }
-
+body{
+  background: linear-gradient(#3939be, #f5f5f5);
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: Arial, sans-serif;
+}
