Complete settings page and its functionality
Now user can change its username and email

Made changes to UserProfile, now avatar is read only, it was made to
make POST,PUT requests easier to do

Get rid of notifications and messages for a while, because they
don't do anything at all at this point

--- a/front/src/app/navbar/navbar.component.css
+++ b/front/src/app/navbar/navbar.component.css
@@ -10,6 +10,13 @@ nav{
   justify-content: space-between;
   z-index: 100;
   padding: 10px;
+  width: 100%;
+}
+
+.icons{
+  display: flex;
+
+  margin-right: 20px;
 }
 
 .icon{
@@ -196,7 +203,9 @@ nav{
 
 }
 
-
+.hidden{
+  display: none;
+}
 
 
 
