--- a/front/src/app/navbar/navbar.component.html
+++ b/front/src/app/navbar/navbar.component.html
@@ -10,15 +10,20 @@
     <img *ngIf="!search_bar_focus" class="icon" src="./../assets/images/search-icon-1.png">
     <input class="search-bar" type="text" placeholder="Search..." (focus)="search_focus()">
   </div>
-
-  <!-- Notifications icon -->
-  <span class="icon-box" (click)="toggleNotifications()" #notificationIcon><img class="icon" src="./../assets/images/bell-icon-1.png"></span>
-  <!-- Messages icon -->
-  <span class="icon-box" (click)="toggleMessages()" #messagesIcon><img class="icon message-icon" src="./../../assets/images/message-icon-1.png"></span>
-  <!-- user icon(avatar) -->
-  <span class="icon-box"><a [routerLink]="['profile']"><img class="icon" [src]="userAvatar  || './../../assets/images/def-user-avatar-icon-1.png'"></a></span>
-  <!-- accounts and other paramteres icon -->
-  <span class="icon-box" (click)="toggleMenu()" #menuIcon><img class="icon arrow-down" src="./../assets/images/arrow-down-icon-1.png"></span>
+  <div class="icons">
+    <!-- Notifications icon -->
+    <span class="icon-box hidden" (click)="toggleNotifications()" #notificationIcon><img class="icon"
+        src="./../assets/images/bell-icon-1.png"></span>
+    <!-- Messages icon -->
+    <span class="icon-box hidden" (click)="toggleMessages()" #messagesIcon><img class="icon message-icon"
+        src="./../../assets/images/message-icon-1.png"></span>
+    <!-- user icon(avatar) -->
+    <span class="icon-box"><a [routerLink]="['profile']"><img class="icon"
+          [src]="userAvatar  || './../../assets/images/def-user-avatar-icon-1.png'"></a></span>
+    <!-- accounts and other paramteres icon -->
+    <span class="icon-box" (click)="toggleMenu()" #menuIcon><img class="icon arrow-down"
+        src="./../assets/images/arrow-down-icon-1.png"></span>
+  </div>
 </nav>
 
 
@@ -45,7 +50,7 @@
 </div>
 
 
-<div *ngIf="messagesDropped"  class="navbar-messages" #navbarMessages>
+<div *ngIf="messagesDropped" class="navbar-messages" #navbarMessages>
   <div class="navbar-messages__container">
     <div class="navbar-messages__container-item">
       <app-drop-out-messages />
@@ -53,8 +58,8 @@
   </div>
 </div>
 
-<div *ngIf="menuDropped"  class="navbar-menu" #navbarMenu>
+<div *ngIf="menuDropped" class="navbar-menu" #navbarMenu>
   <div class="navbar-menu__container">
-      <app-drop-out-menu />
+    <app-drop-out-menu />
   </div>
 </div>
