continue working with albums
backend:

added new view for getting album by username and album's name

now id of users is serialized, in other words id will be also returned
in response from backend
I did it so we could find user's albums by filtering all albums by user
id. Because album stores just foreign key(id) of the user

frontend:

done with services for fetching albums from backend

started working on album component's html

changed routing of albums to api/albums/:username/:albumname

--- a/front/src/app/album/album.component.html
+++ b/front/src/app/album/album.component.html
@@ -1,1 +1,8 @@
-<p>album works!</p>
+<div>
+  <section>
+    <h1>{{album ? album.name : "Something went wrong"}}</h1>
+  </section>
+  <section>
+
+  </section>
+</div>
