--- a/front/src/app/profile/profile.component.html
+++ b/front/src/app/profile/profile.component.html
@@ -27,7 +27,7 @@
 
 
     <div>
-      <div class="card show-more-card" routerLink="/albums/{{userName}}">
+      <div class="card show-more-card" routerLink="/albums/{{userName}}/created">
         <h3>Show More</h3>
         <img src="./../../assets/images/plus-icon.svg">
       </div>
