--- a/front/src/app/create/create.component.html
+++ b/front/src/app/create/create.component.html
@@ -18,6 +18,8 @@
           <input type="text" id="text-line" name="text-line" [(ngModel)]="textLine" placeholder="Add name" class="input-glow"><br><br>
           <textarea id="photo-description" name="photo-description" rows="4" cols="50" [(ngModel)]="photoDescription" placeholder="Add Description" class="input-glow"></textarea><br><br>
           <textarea id="photo-url" name="photo-url" rows="1" cols="5" [(ngModel)]="photoUrl" placeholder="Content Url" class="input-glow"></textarea><br><br>
+          <textarea id="photo-tag" name="photo-tag" rows="1" cols="5" [(ngModel)]="tags" placeholder="Add some tags" class="input-glow"></textarea><br><br>
+          <p>add tags using commas( like "tag1, tag2" )</p>
           <button type="button" (click)="saveData()">Save</button>
         </div>
       </div>
