--- a/front/src/app/drop-out-menu/drop-out-menu.component.html
+++ b/front/src/app/drop-out-menu/drop-out-menu.component.html
@@ -1,7 +1,9 @@
 <div class="menu">
   
   <div class="options">
-    <button class="btn logout__btn" (click)="logout()">Log out</button>
-    <button class="btn settings__btn" routerLink="settings">Settings</button>
+    <button class="btn logout__btn" (click)="logout()"><a><img class="icon"
+      [src]="'./../../assets/images/logout-icon.png'"></a>  Log out</button>
+    <button class="btn settings__btn" routerLink="settings"><a><img class="icon"
+      [src]="'./../../assets/images/settings-icon.png'"></a>  Settings</button>
   </div>
 </div>
