--- a/front/src/app/settings/settings.component.html
+++ b/front/src/app/settings/settings.component.html
@@ -25,7 +25,12 @@
       <div>
         <button type="submit">Save Changes</button>
       </div>
-
+      <br>
+      <p>or</p>
+      <br>
+      <div class="delete-button">
+        <button>Delete Account</button>
+      </div>
     </form>
   </body>
   </html>
