--- a/front/src/app/create/create.component.css
+++ b/front/src/app/create/create.component.css
@@ -6,7 +6,28 @@
     align-items: center;
     height: 110vh;
  }
- 
+ #photo-dropzone {
+  border: 2px dashed #ccc;
+  padding: 20px;
+  min-height: 300px;
+  min-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#photo-dropzone p {
+  margin: 0;
+}
+
+.photo-preview-wrapper img {
+  max-width: 100%;
+  max-height: 200px;
+}
+
+
+
  .file_getter {
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -26,6 +47,7 @@
     padding: 8px;
     font-size: 16px;
     margin-bottom: 16px;
+    margin-right: 30px;
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -62,11 +84,29 @@
     cursor: pointer;
     font-family: "Arial", "sans-serif";
   }
-  
+  #drop-area {
+    border: 2px dashed grey;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: grey;
+  }
   input[type="submit"]:hover {
     background-color: rgb(57, 57, 115);
   }
    
+  #photo-tag {
+    margin-bottom: 1px;
+  }
+  
+  #tags-instructions {
+    font-size: 12px;
+    color: grey;
+    margin-bottom: 20px;
+  }
+  
   
    #photo-container {
      float: left;
@@ -148,6 +188,7 @@
      display: flex;
      flex-direction: column;
      margin: auto;
+     padding: 20px;
    }
    .but{
      top:0;
