--- a/front/src/app/drop-out-menu/drop-out-menu.component.css
+++ b/front/src/app/drop-out-menu/drop-out-menu.component.css
@@ -5,7 +5,10 @@
   padding: 10px;
   font-family: Arial, sans-serif;
 }
-
+.icon{
+  width: 16px;
+  height: 16px;
+}
 .profile {
   width: 40px;
   height: 40px;
