--- a/front/src/app/settings/settings.component.css
+++ b/front/src/app/settings/settings.component.css
@@ -61,7 +61,23 @@ body {
   button[type="submit"]:focus {
     outline: none;
   }
+  button {
+    background-color: transparent;
+    color: black;
+    border: 1px solid black;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+  }
 
+  button:hover {
+    background-color: red;
+    color: white;
+  }
+
+  button:focus {
+    outline: none;
+  }
   .error{
     font-size: 17px;
     font-weight: 700;
