fix appearance of created pins
backend:

deleted abundant directories

frontend:

renamed getPin method in the media.service to getMedia

changed Pin component by adding ngInit method which gets pin image from
backend using media.service and changes contentUrl to that image if
content field is not empty

--- a/front/src/app/pin/pin.component.html
+++ b/front/src/app/pin/pin.component.html
@@ -1,4 +1,4 @@
 <div class="pin">
-  <img src={{pin.contentUrl}}>
+  <img [src]=pin.contentUrl>
   <button class="save-button">Save</button>
 </div>
