add pin page where user can see details of the pin
backend:
replaced hiddenField for the user to the custom
UserSerializer(read_only = True) to gain access to this field

frontend:
new pin-page component

added new route to that component: pin/:pinId

--- a/front/src/app/pin/pin.component.html
+++ b/front/src/app/pin/pin.component.html
@@ -1,4 +1,4 @@
-<div class="pin">
+<a class="pin" [routerLink]="'/pin/' + pin.id">
   <img [src]=pin.contentUrl>
   <button class="save-button">Save</button>
-</div>
+</a>
