Complete PUT and DELETE functionality
To access to the edit mode, you should go to profile->created pins->
more pins click on it, it will lead you to the "created" album page and
there you have to hover over one of the pins and click on appeared
"Edit" button

You will be redirected to the page which corresponds to the 'create'
component, but it will be on "edit mode", this means it will edit
existing pin instead of building new one

It will know whether it is edit mode or not using ActivatedRoute, URL of
the page in other words, if your URL consists :pinId,then it will
activate edit mode

Edit mode uses PinService to generate PUT and DELETE request

Now on the album page, instead of save button is edit button

--- a/front/src/app/create/create.component.html
+++ b/front/src/app/create/create.component.html
@@ -15,13 +15,16 @@
           </div>
         </div>
         <div id='desc'>
-          <input type="text" id="text-line" name="text-line" [(ngModel)]="textLine" placeholder="Add name" class="input-glow"><br><br>
-          <textarea id="photo-description" name="photo-description" rows="4" cols="50" [(ngModel)]="photoDescription" placeholder="Add Description" class="input-glow"></textarea><br><br>
-          <textarea id="photo-url" name="photo-url" rows="1" cols="5" [(ngModel)]="photoUrl" placeholder="Content Url" class="input-glow"></textarea><br><br>
-          <textarea id="photo-tag" name="photo-tag" rows="1" cols="5" [(ngModel)]="tags" placeholder="Add some tags" class="input-glow"></textarea>
+          <input type="text" id="text-line" name="text-line" [(ngModel)]="textLine" [placeholder]="currPin?.title ?? 'Add name'" class="input-glow"><br><br>
+          <textarea id="photo-description" name="photo-description" rows="4" cols="50" [(ngModel)]="photoDescription" [placeholder]="currPin?.description ?? 'Add Description'" class="input-glow"></textarea><br><br>
+          <!-- Show photo-url only while building a pin -->
+          <textarea id="photo-url" name="photo-url" rows="1" cols="5" [(ngModel)]="photoUrl" [placeholder]="currPin?.contentUrl ?? 'Content Url'" class="input-glow"></textarea><br><br>
+          <textarea id="photo-tag" name="photo-tag" rows="1" cols="5" [(ngModel)]="tags" [placeholder]="pinTagsStr ??'Add some tags'" class="input-glow"></textarea>
           <p id="tags-instructions">Add tags using commas (e.g. "tag1, tag2")</p>
-         
-          <button type="button" (click)="saveData()">Save</button>
+
+          <button *ngIf="!editMode" type="button" (click)="saveData()">Save</button>
+          <button *ngIf="editMode" type="button" (click)="editData()">Edit</button>
+          <button *ngIf="editMode" (click)="deleteData()" >Delete Pin</button>
         </div>
       </div>
     </form>
